--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/inria-sans": "^4.5.0",
+    "@fontsource/inria-serif": "^4.5.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
