--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/inria-serif": "^4.5.0",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-d3-tree": "^3.1.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
