--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "cSpell.words": [
+        "browserconfig",
+        "favicons",
         "fontsource",
         "Inria",
+        "msapplication",
+        "mstile",
         "resizer",
         "tailwindcss",
         "Vercel"
