--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fontsource/inria-sans": "^4.5.0",
     "@fontsource/inria-serif": "^4.5.0",
     "next": "12.0.7",
+    "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-d3-tree": "^3.1.1",
     "react-dom": "17.0.2"
