--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,26 @@
 {
     "cSpell.words": [
         "abca",
+        "Arithm",
+        "Barbay",
         "browserconfig",
+        "Demaine",
+        "Fano",
         "favicons",
         "fontsource",
+        "González",
         "Inria",
         "msapplication",
         "mstile",
+        "PKZIP",
+        "Ramseyer",
         "resizer",
+        "Rodríguez",
         "tailwindcss",
+        "Tanen's",
         "tspan",
+        "UCSC",
+        "Universitat",
         "Vercel"
     ]
 }
